# kazam

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  battle.md  simulator.md
battle/: Cargo.toml  README.md
battle/src/: lib.rs
battle/src/query/: matchup.rs  mod.rs
battle/src/tracking/: battle.rs  mod.rs  snapshot.rs  updater.rs
battle/src/types/: conditions.rs  field.rs  mod.rs  pokemon.rs  pokemon_type.rs  side.rs  stats.rs  status.rs
client/: Cargo.toml  README.md
client/examples/: battle_tracker.rs  chat_bot.rs  cli_chat.rs  connect-test.rs  format_printer.rs  login-user.rs  random_battle.rs
client/src/: auth.rs  connection.rs  handle.rs  handler.rs  lib.rs  receiver.rs  room.rs  sender.rs  state.rs
client/src/auth/: mod.rs
client/src/connection/: mod.rs
protocol/: Cargo.toml  README.md
protocol/src/: client.rs  lib.rs  server.rs
protocol/src/client/: mod.rs
protocol/src/server/: battle.rs  battle_init.rs  battle_major.rs  battle_minor.rs  battle_progress.rs  battle_state.rs  global.rs  mod.rs  request.rs  room.rs  tests.rs
replay/: Cargo.toml  README.md
replay/src/: controller.rs  error.rs  lib.rs  log.rs
team/: Cargo.toml  README.md
team/src/: codec.rs  error.rs  lib.rs  model.rs
