[package]
name = "kazam-battle"
version = "0.3.0"
edition.workspace = true
description = "Battle state tracking and domain types for Pokemon Showdown (experimental)"
license = "MIT"
repository = "https://github.com/BradyMenswar/kazam"
keywords = ["pokemon", "showdown", "battle", "state", "game"]
categories = ["game-development", "data-structures"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
kazam-protocol = { version = "0.2.0", path = "../protocol" }
serde = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json.workspace = true
