[package]
name = "kazam-client"
version.workspace = true
edition.workspace = true

[dependencies]
kazam-protocol = { path = "../protocol" }
tokio = { workspace = true, features = ["net", "rt", "macros"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
anyhow.workspace = true
thiserror.workspace = true
reqwest = { version = "0.12", features = ["json"] }
serde_json.workspace = true
futures-util = "0.3"
