[package]
name = "kazam-client"
version.workspace = true
edition.workspace = true

[dependencies]
kazam-protocol = { path = "../protocol" }
tokio = { workspace = true, features = ["net", "rt", "rt-multi-thread", "macros", "sync"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
anyhow.workspace = true
thiserror.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json.workspace = true
futures-util = "0.3"
tracing = "0.1"