[package]
name = "kazam-protocol"
version.workspace = true
edition.workspace = true
description = "Protocol types and message parsing for Pokemon Showdown websocket API"
license = "MIT"
repository = "https://github.com/BradyMenswar/kazam"
keywords = ["pokemon", "showdown", "protocol", "websocket", "parser"]
categories = ["parsing", "network-programming"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true