[package]
name = "kazam-team"
version.workspace = true
edition.workspace = true
description = "Pokemon Showdown team formats and conversion utilities"
license = "MIT"
repository = "https://github.com/BradyMenswar/kazam"
readme = "README.md"
keywords = ["pokemon", "showdown", "team", "import", "export"]
categories = ["parser-implementations", "data-structures"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
